@@ -2,6 +2,9 @@
 Maintainer:
 Christopher (siege) O'Brien  <siege@preoccupied.net>
 
+Packager:
+Stephen Dawkins
+
 Patches:
 Stephen Dawkins
 Stu Tomlinson  <stu@nosnilmot.com>
